--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <h1 class="float-md-start mb-0">THIS IS ME!</h1>
                     <nav class="nav nav-masthead justify-content-center float-md-end">
                         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/movies.html">Movies</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/contact.html">Contact</a>
+                        <a class="nav-link fw-bold py-1 px-0" href="https://michaelscott486.github.io/movies.html">Movies</a>
+                        <a class="nav-link fw-bold py-1 px-0" href="https://michaelscott486.github.io/contact.html">Contact</a>
                     </nav>
                 </div>
             </header>
@@ -95,7 +95,7 @@
                     To know more about my interests and hobbies, click the button below.</p>
                 <br>
                 <p class="lead">
-                    <a href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/more.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">More About Me</a>
+                    <a href="https://michaelscott486.github.io/more.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">More About Me</a>
                 </p>
             </main>
             <br><br>
