--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
         <nav class="navbar navbar-dark bg-dark mb-4">
             <div>
                 <a class="navbar-brand" href="#" style="font-size: 24px">Contact</a>
-                <a class="navbar-brand" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/index.html">Home</a>
-                <a class="navbar-brand" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/more.html">More</a>
-                <a class="navbar-brand" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/movies.html">Movies</a>
+                <a class="navbar-brand" href="https://michaelscott486.github.io/">Home</a>
+                <a class="navbar-brand" href="https://michaelscott486.github.io/more.html">More</a>
+                <a class="navbar-brand" href="https://michaelscott486.github.io/movies.html">Movies</a>
             </div>
         </nav>
 
