--- a/more.html
+++ b/more.html
@@ -79,9 +79,9 @@
             </div>
             <div class="nav-scroller py-1 mb-2">
                 <nav class="nav d-flex">
-                    <a class="p-2 link-secondary" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/index.html" style="font-size: 20px;">Home</a>&emsp;
-                    <a class="p-2 link-secondary" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/movies.html" style="font-size: 20px;">Movies</a>&emsp;
-                    <a class="p-2 link-secondary" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/contact.html" style="font-size: 20px;">Contact</a>
+                    <a class="p-2 link-secondary" href="https://michaelscott486.github.io/" style="font-size: 20px;">Home</a>&emsp;
+                    <a class="p-2 link-secondary" href="https://michaelscott486.github.io/movies.html" style="font-size: 20px;">Movies</a>&emsp;
+                    <a class="p-2 link-secondary" href="https://michaelscott486.github.io/contact.html" style="font-size: 20px;">Contact</a>
                 </nav>
             </div>
         </div>
