--- a/movies.html
+++ b/movies.html
@@ -20,9 +20,9 @@
         <nav class="navbar navbar-dark bg-dark mb-4">
             <div>
                 <a class="navbar-brand" href="#" style="font-size: 24px">Movies</a>
-                <a class="navbar-brand" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/index.html">Home</a>
-                <a class="navbar-brand" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/more.html">More</a>
-                <a class="navbar-brand" href="https://scaling-trout-69g46v65v59v3x69-8080.app.github.dev/contact.html">Contact</a>
+                <a class="navbar-brand" href="https://michaelscott486.github.io/">Home</a>
+                <a class="navbar-brand" href="https://michaelscott486.github.io/more.html">More</a>
+                <a class="navbar-brand" href="https://michaelscott486.github.io/contact.html">Contact</a>
             </div>
         </nav>
 
